[metadata]
name = kind-wycliffwasonga
version = 0.0.2
author = Wycliff Wasonga
author_email = wycliffwasonga@gmail.com
description = For querying documents from Korea Investor's Network for Disclosure(KIND)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wycliffwasonga/kind
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    async-generator==1.10
    attrs==21.4.0
    certifi==2021.10.8
    cffi==1.15.0
    charset-normalizer==2.0.12
    click==8.0.3
    colorama==0.4.4
    configparser==5.2.0
    crayons==0.4.0
    cryptography==36.0.1
    h11==0.13.0
    idna==3.3
    outcome==1.1.0
    pycparser==2.21
    pyOpenSSL==22.0.0
    requests==2.27.1
    selenium==4.1.0
    sniffio==1.2.0
    sortedcontainers==2.4.0
    trio==0.19.0
    trio-websocket==0.9.2
    urllib3==1.26.8
    webdriver-manager==3.5.3
    wsproto==1.0.0
    pywin32==303; sys_platform == "win32"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kind = kind.__main__:cli
